<?xml version="1.0" encoding="utf-8"?>

<!--This is a course requirement for CS 192 Software Engineering II under the supervision of Asst. Prof. Ma. Rowena C. Solamo of the Department of Computer Science, College of Engineering, University of the Philippines, Diliman for the AY 2017-2018.
Richelle Yap -->

<!-- Code History:
Initial Code Authored by: Richelle Yap -->

<!-- File Creation Date: (Sprint 1) 2/12/2018 to 2/23/2018
Development Group: Group 1
Client Group: CS 192 class
Purpose of file: Layouts the submit rating screen -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.gelic.Sarapp.SubmitRating">

     <RelativeLayout
          android:id="@+id/myId"
          android:layout_width="fill_parent"
          android:layout_height="198dp"
          android:padding="10dip">

          <android.support.v7.widget.CardView
               android:layout_width="80dp"
               android:layout_height="80dp"
               android:layout_alignParentTop="true"
               android:layout_centerInParent="true"
               android:elevation="12dp"
               android:innerRadius="0dp"
               android:shape="ring"
               android:thicknessRatio="1.9"
               app:cardBackgroundColor="@color/orange"
               app:cardCornerRadius="40dp">

               <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:color/background_light" />
          </android.support.v7.widget.CardView>

          <TextView
               android:id="@+id/foodStoreName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentTop="true"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="80dp"
               android:fontFamily="@font/roboto_bold"
               android:textColor="@color/black"
               android:textSize="25sp" />


          <TextView
               android:id="@+id/foodStoreCuis"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@id/foodStoreName"
               android:layout_centerHorizontal="true"
               android:layout_centerInParent="true"
               android:layout_marginTop="-5dp"
               android:fontFamily="@font/roboto_medium"
               android:textColor="@color/black"
               android:textSize="15sp" />


          <TextView
               android:id="@+id/foodStoreLoc"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignBottom="@+id/locStat"
               android:layout_below="@+id/foodStoreCuis"
               android:layout_centerInParent="true"
               android:layout_marginTop="-5dp"
               android:fontFamily="@font/roboto_regular"
               android:textColor="@color/black"
               android:textSize="15sp" />

          <android.support.v7.widget.CardView
               android:id="@+id/cardView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@+id/foodStoreLoc"
               android:layout_centerInParent="true"
               android:layout_marginTop="2dp"
               app:cardBackgroundColor="@color/orange"
               app:cardCornerRadius="10dp">

               <TextView
                    android:id="@+id/ratStat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/satisfy_regular"
                    android:text="@string/sarapp_rating"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


               <TextView
                    android:id="@+id/foodStoreRat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignEnd="@+id/foodStoreLoc"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="130dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="130dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

          </android.support.v7.widget.CardView>

     </RelativeLayout>

     <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:id="@+id/linear_layout1_id"
          app:layout_constraintTop_toBottomOf="@id/myId">

          <Button
               android:id="@+id/button_id1"
               style="?android:attr/borderlessButtonStyle"
               android:layout_width="fill_parent"
               android:layout_height="48dp"
               android:layout_weight="1"
               android:background="@color/orange"
               android:fontFamily="@font/roboto_medium"
               android:text="@string/ratings"
               android:textAllCaps="false"
               android:textColor="@color/white"
               app:layout_constraintRight_toLeftOf="@id/button_id2" />

          <Button
               android:id="@+id/button_id2"
               style="?android:attr/borderlessButtonStyle"
               android:layout_width="fill_parent"
               android:layout_weight="1"
               android:layout_height="48dp"
               android:background="@color/light_orange"
               android:fontFamily="@font/roboto_medium"
               android:text="Google Map"
               android:textAllCaps="false"
               android:textColor="@color/black"
               app:layout_constraintLeft_toRightOf="@id/button_id1"
               tools:layout_editor_absoluteX="192dp"
               tools:layout_editor_absoluteY="198dp" />
     </LinearLayout>

     <GridLayout
          android:id="@+id/submit_rating_grid_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/dark_orange"
          android:columnCount="2"
          android:hapticFeedbackEnabled="false"
          android:orientation="horizontal"
          android:rowCount="4"
          app:layout_constraintTop_toBottomOf="@id/linear_layout1_id">

          <TextView android:text="@string/food_quality" />

          <RatingBar
               android:id="@+id/food_quality"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:theme="@style/RatingBar2"
               android:layout_marginBottom="-15dp"/>

          <TextView android:text="@string/pricing" />

          <RatingBar
               android:id="@+id/pricing"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:theme="@style/RatingBar2"
               android:layout_marginBottom="-15dp"/>

          <TextView android:text="@string/service" />

          <RatingBar
               android:id="@+id/service"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:theme="@style/RatingBar2"
               android:layout_marginBottom="-15dp"/>

          <TextView android:text="@string/ambience" />

          <RatingBar
               android:id="@+id/ambience"
               android:isIndicator="false"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:theme="@style/RatingBar2"
               android:layout_marginBottom="-15dp"/>
     </GridLayout>

     <EditText
         android:id="@+id/submitText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintTop_toBottomOf="@+id/submit_rating_grid_layout"
          android:hint = "Comment here..."/>

     <TextView
         android:id="@+id/ratingText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/submitButt"
         tools:layout_editor_absoluteX="3dp" />

     <Button
          android:id="@+id/submitButt"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="Submit"
          android:background="@drawable/submitrating_button_bg"
          app:layout_constraintTop_toBottomOf="@id/submitText"
          tools:layout_editor_absoluteY="51dp" />
</android.support.constraint.ConstraintLayout>
