<?xml version="1.0" encoding="utf-8"?>
<!--This is a course requirement for CS 192 Software Engineering II under the supervision of Asst. Prof. Ma. Rowena C. Solamo of the Department of Computer Science, College of Engineering, University of the Philippines, Diliman for the AY 2017-2018.
Richelle Yap -->

<!-- Code History:
Initial Code Authored by: Richelle Yap -->

<!-- File Creation Date: (Sprint 1) 2/12/2018 to 2/23/2018
Development Group: Group 1
Client Group: CS 192 class
Purpose of file: Layouts the custom row in the list of ratings submitted by users -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text = "DATE"/>

        <GridLayout
            android:id="@+id/custom_list_row_grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="4"
            app:layout_constraintTop_toBottomOf="@+id/date">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/food_quality"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/food_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:stepSize="1"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/pricing"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/pricing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:stepSize="1"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/service"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:stepSize="1"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/ambience"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/ambience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:stepSize="1"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp" />


        </GridLayout>

        <LinearLayout
            android:id="@+id/listView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="255dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/average_rating"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginLeft="5dp"/>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>